fix non scroll by removing overflowhidden in bod{} css + made date+ duration bigger

--- a/srcs/frontend/src/style/styles.css
+++ b/srcs/frontend/src/style/styles.css
@@ -53,7 +53,6 @@ body {
 	background-color: #000;
 	color: #fff;
 	height: 100vh;
-	overflow: hidden;
 }
 
 /* Back to Home Button - Universal Style */
